--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
 				</p>
 				<p>
 					It is open-sourced on
-					<a href="https://www.github.com" target="_blank">GitHub</a>
+					<a href="https://github.com/whoplaros" target="_blank">GitHub</a>
 					and hosted on
-					<a href="https://www.netlify.com/" target="_blank">Netlify.</a>
+					<a
+						href="https://app.netlify.com/sites/guileless-piroshki-43b815/overview"
+						target="_blank"
+						>Netlify.</a
+					>
 				</p>
 			</footer>
 		</div>
